fix bug (messy): contents spilling out right side

--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -23,7 +23,7 @@
 .one-spot__header {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  width: 94%; //could use refactor, not sure why it's spilling over
   height: 370px;
   margin: 1.5em;
   gap: 1.5em;
@@ -35,7 +35,7 @@
   max-width: 500px;
   min-width: 200px;
   height: 350px;
-  flex: 0 0 50%;
+  flex: 0 0 40%;
 }
 
 .one-spot__create-visit {
@@ -58,6 +58,7 @@
 }
 
 .one-spot__visits {
+  width: 90%; //could use refactor, not sure why it's spilling over
   display: grid;
   grid-template-columns: repeat(3, 33.33%);
   grid-column-gap: 1em;
